[package]
name = "unchecked-index"
version = "0.2.1"

license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/unchecked-index"
documentation = "https://docs.rs/unchecked-index/"
authors = ["bluss"]
readme = "README.md"

description = "Unchecked indexing wrapper using regular index syntax."

keywords = ["unchecked", "index", "slice"]
categories = ["rust-patterns"]

[dependencies]

[package.metadata.release]
no-dev-version = true
